adding explanation of lexical entries

--- a/README.org
+++ b/README.org
@@ -4,21 +4,26 @@ The files in this directory are mostly more fleshed out examples from
 talks. They still consitute incomplete fragments but provide details
 that are otherwise missing in overviews.
 
-** Potawatomi possession PotawatomiPoss.v
+Some of the explanations in these files assume a knowledge of LCG. For
+a brief introduction, see the files:
+
+- introlcgho.pdf
+- raisingho.pdf
+
+** Potawatomi possession: PotawatomiPoss.v
 
 The phenomenon is described in:
 
 - [[https://noah.diewald.me/files/aimm4poster.pdf][The structure of Potawatomi hybrid-class overabundance]]
 
-** Quechua plurals QuechuaPlural.v
+** Quechua plurals: QuechuaPlural.v
 
 The phenomenon is described in:
 
 - [[https://noah.diewald.me/files/diewald2018wp.pdf][WP for sign-based CGs: a focus on morphotactics]]
 
-** Wao Tededo future tense WaoFuture.v
+** Wao Tededo future tense: WaoFuture.v
 
 I have not uploaded the slides yet.
-
 
 
