added a line introducting the link

--- a/README.org
+++ b/README.org
@@ -25,5 +25,7 @@ The phenomenon is described in:
 
 ** Wao Tededo future tense: WaoFuture.v
 
+The phenomenon is described in:
+
 - [[https://noah.diewald.me/files/free_2021.pdf][Overabundance and the interface]]
 
